# GasGuard

./: .gitignore  Cargo.toml  PERSISTENT_STORAGE_USAGE_REPORT.md  README.md  SNAPSHOT_TOOL_IMPLEMENTATION.md  package-lock.json  package.json  pr_body.md  tsconfig.json
.github/workflows/: ci.yml  gasguard-scan.yml  gasguard.yml
apps/api/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
apps/api-service/: hardhat.config.ts  ormconfig.ts
config/: gasguard.config.json
docs/: STELLAR_NETWORK_VALIDATION_RULE.md
docs/rules/: general.md  solidity.md
examples/: contract_with_network_validation.rs  contract_without_network_validation.rs  generate-architecture-report.ts
libs/cache/: cache.service.ts  file-hash.service.ts  incremental-cache.service.ts  index.ts
libs/chains/: base-adapter.ts  evm-adapter.ts  index.ts  soroban-adapter.ts
libs/engine/: Cargo.toml
libs/monitoring/: health-check.ts
libs/rpc/: failover-strategy.ts  index.ts  rpc-client.ts
libs/simulation/: index.ts  simulation-engine.ts
scripts/: pre-commit-scan.js  run-precommit-scan.ts  run-stellar-regression.ps1  run-stellar-regression.sh  verify-regression-temp.cjs
src/config/: config.types.ts  index.ts
src/reporting/: mod.rs
src/rules/: sorobanBestPractices.md
tests/: config_registry.spec.ts  solidity_reentrancy.spec.ts
tests/rules/: best-practices-rules.spec.ts  detect-duplicate-event-emissions.spec.ts  detect-expensive-memory-copies.spec.ts  detect-expensive-sload-operations.spec.ts  detect-improper-erc20-approval.spec.ts  detect-unsafe-fallback.spec.ts  (+6 more)
(+456 files in other folders)
