[workspace]
resolver = "2"
members = [
    "packages/rules",
    "libs/engine", 
    "libs/ast",
    "libs/parsers/rust",
    "libs/parsers/solidity",
    "libs/parsers/vyper",
    "libs/rule-engine",
    "libs/plugin-system",
    "libs/auto-fix",
    "apps/api"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GasGuard Team"]
license = "MIT"
description = "Automated Optimization Suite for Stellar Soroban Contracts"
